--- a/index.html
+++ b/index.html
@@ -10,21 +10,53 @@
 <body>
 <div class="triangles">
     <div class="triangles__container">
+        <!--right side-->
         <div class="tr tr_w tr_left_lg" id="tr1"></div>
         <div class="tr tr_w tr_right_lg" id="tr2"></div>
-        <div class="tr tr_w tr_left_md" id="tr3"></div>
-        <div class="tr tr_w tr_right_sm" id="tr4"></div>
-        <div class="tr tr_w tr_left_xs" id="tr5"></div>
-        <div class="tr tr_w tr_right_xs" id="tr6"></div>
-        <div class="tr tr_w tr_left_xs" id="tr7"></div>
-        <div class="tr tr_w tr_left_xs" id="tr8"></div>
-        <div class="tr tr_w tr_right_xs" id="tr9"></div>
-        <div class="tr tr_w tr_left_xs" id="tr10"></div>
+        <div class="tr tr_w tr_left_lg" id="tr3"></div>
+        <div class="tr tr_w tr_right_md" id="tr4"></div>
+        <div class="tr tr_w tr_left_sm" id="tr5"></div>
+        <div class="tr tr_w tr_right_sm" id="tr6"></div>
+        <div class="tr tr_w tr_left_sm" id="tr7"></div>
+        <div class="tr tr_w tr_left_sm" id="tr8"></div>
+        <div class="tr tr_w tr_right_sm" id="tr9"></div>
+        <div class="tr tr_w tr_left_sm" id="tr10"></div>
+        <div class="tr tr_p tr_left_lg" id="tr11"></div>
+        <div class="tr tr_p tr_right_lg" id="tr12"></div>
+        <div class="tr tr_p tr_left_md" id="tr13"></div>
+        <div class="tr tr_p tr_right_md" id="tr14"></div>
+        <div class="tr tr_p tr_left_sm" id="tr15"></div>
+        <div class="tr tr_p tr_left_sm" id="tr16"></div>
+        <div class="tr tr_p tr_right_sm" id="tr17"></div>
+        <div class="tr tr_p tr_left_sm" id="tr18"></div>
+        <div class="tr tr_p tr_right_sm" id="tr19"></div>
+        <div class="tr tr_p tr_left_sm" id="tr20"></div>
+        <div class="tr tr_p tr_right_sm" id="tr21"></div>
+        <div class="tr tr_p tr_left_sm" id="tr22"></div>
+        <div class="tr tr_p tr_right_xs" id="tr23"></div>
+        <div class="tr tr_p tr_left_xs" id="tr24"></div>
+        <!--left side-->
+        <div class="tr tr_p tr_right_xs" id="tr25"></div>
+        <div class="tr tr_p tr_left_xs" id="tr26"></div>
+        <div class="tr tr_p tr_right_xs" id="tr27"></div>
+        <div class="tr tr_p tr_right_xs" id="tr28"></div>
+        <div class="tr tr_p tr_left_xs" id="tr29"></div>
+        <div class="tr tr_p tr_right_xs" id="tr30"></div>
+        <div class="tr tr_p tr_right_xs" id="tr31"></div>
+        <div class="tr tr_p tr_left_xs" id="tr32"></div>
+        <div class="tr tr_p tr_right_xs" id="tr33"></div>
+        <div class="tr tr_p tr_right_xs" id="tr34"></div>
+
+        <div class="tr tr_p tr_right_md" id="tr35"></div>
+        <div class="tr tr_p tr_left_lg" id="tr36"></div>
+        <div class="tr tr_p tr_right_md" id="tr37"></div>
+        <div class="tr tr_p tr_left_sm" id="tr38"></div>
+        <div class="tr tr_p tr_right_xs" id="tr39"></div>
     </div>
 </div>
 <svg xmlns="http://www.w3.org/2000/svg" id="svg-city" xmlns:xlink="http://www.w3.org/1999/xlink"
      style="isolation:isolate"
-     viewBox="0 0 1000 1000" width="102vh" height="102vh">
+     viewBox="0 0 1000 1000" width="55vw" height="55vw">
     <defs>
         <clipPath id="_clipPath_WOkILBWwlrnqzRhzU8BQxcP2WQJ3ALco">
             <rect width="1000" height="1000"/>
@@ -58,5 +90,6 @@
 </svg>
 
 <script src="js/main.js"></script>
+<!--<script src="js/triangles.js"></script>-->
 </body>
 </html>
