Split scss file

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!--right side-->
         <div class="tr tr_w tr_left_lg" id="tr1"></div>
         <div class="tr tr_w tr_right_lg" id="tr2"></div>
-        <div class="tr tr_w tr_left_lg" id="tr3"></div>
+        <div class="tr tr_w tr_left_md" id="tr3"></div>
         <div class="tr tr_w tr_right_md" id="tr4"></div>
         <div class="tr tr_w tr_left_sm" id="tr5"></div>
         <div class="tr tr_w tr_right_sm" id="tr6"></div>
@@ -52,11 +52,22 @@
         <div class="tr tr_p tr_right_md" id="tr37"></div>
         <div class="tr tr_p tr_left_sm" id="tr38"></div>
         <div class="tr tr_p tr_right_xs" id="tr39"></div>
+        <div class="tr tr_p tr_left_xs" id="tr40"></div>
+        <div class="tr tr_p tr_right_xs" id="tr41"></div>
+        <div class="tr tr_p tr_right_xs" id="tr42"></div>
+
+        <!--center-->
+        <div class="tr tr_p tr_left_sm" id="tr43"></div>
+        <div class="tr tr_p tr_right_sm" id="tr44"></div>
+
+        <div class="tr tr_p tr_left_xs" id="tr45"></div>
+        <div class="tr tr_p tr_right_xs" id="tr46"></div>
+
     </div>
 </div>
 <svg xmlns="http://www.w3.org/2000/svg" id="svg-city" xmlns:xlink="http://www.w3.org/1999/xlink"
      style="isolation:isolate"
-     viewBox="0 0 1000 1000" width="55vw" height="55vw">
+     viewBox="0 0 1000 1000" width="53vw" height="53vw">
     <defs>
         <clipPath id="_clipPath_WOkILBWwlrnqzRhzU8BQxcP2WQJ3ALco">
             <rect width="1000" height="1000"/>
@@ -72,7 +83,7 @@
                   fill="rgb(255,255,255)" vector-effect="non-scaling-stroke"/>
         </mask>
         <linearGradient id="grad" x1="0%" y1="0%" x2="100%" y2="0%">
-            <stop offset="0%" style="stop-color:#18cda6;stop-opacity:1"/>
+            <stop offset="35%" style="stop-color:#18cda6;stop-opacity:1"/>
             <stop offset="100%" style="stop-color:#12a4d5;stop-opacity:1"/>
         </linearGradient>
     </defs>
