--- a/steps.html
+++ b/steps.html
@@ -12,7 +12,7 @@
 <svg width="300px" height="125px" viewBox="0 0 300 125" xmlns="http://www.w3.org/2000/svg" id="order-svg">
     <defs>
         <linearGradient id="grad1" x1="0%" y1="0%" x2="100%" y2="0%" gradientUnits="userSpaceOnUse">
-            <stop offset="0%" style="stop-color:#18cda6;stop-opacity:1"/>
+            <stop offset="30%" style="stop-color:#18cda6;stop-opacity:1"/>
             <stop offset="100%" style="stop-color:#12a4d5;stop-opacity:1"/>
         </linearGradient>
     </defs>
@@ -29,7 +29,7 @@
             <line x1="143" x2="146" y1="93" y2="93"/>
             <line x1="149" x2="166" y1="93" y2="93"/>
         </g>
-        <g class="circles" stroke="#18cda6">
+        <g class="circles">
             <circle cx="80" cy="14" r="4"/>
             <circle cx="92" cy="14" r="4"/>
             <circle cx="104" cy="14" r="4"/>
